--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="{{ site.baseurl }}/assets/img/logo.svg" height="80" />
+    </a>
 
     <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -16,6 +18,8 @@
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/ssi">Self-sovereign identity</a>
         <a class="page-link" href="{{ site.baseurl }}/data-vault">Data Vault</a>
+        <a class="page-link" href="#">rLogin</a>
+        <a class="page-link" href="#">Identity Manager</a>
       </div>
     </nav>
   </div>
