Fixed links across the website

--- a/_includes/ref.html
+++ b/_includes/ref.html
@@ -1,1 +1,1 @@
-<sup><a href="/{{ site.baseurl }}/references/#ref-{{ include.id }}">{{ include.id }}</a></sup>
+<sup><a href="{{ site.baseurl }}/references/#ref-{{ include.id }}">{{ include.id }}</a></sup>
