--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <img src="{{ site.baseurl }}/assets/img/logo.svg" height="80" />
     </a>
 
-    <nav class="site-nav">
+    <nav class="site-nav" style="text-align:center;">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
         <span class="menu-icon">
@@ -17,7 +17,7 @@
 
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/ssi">Self-sovereign identity</a>
-        <a class="page-link" href="{{ site.baseurl }}/data-vault">Data Vault</a>
+        <a class="page-link" href="#">Data Vault</a>
         <a class="page-link" href="#">rLogin</a>
         <a class="page-link" href="#">Identity Manager</a>
       </div>
