Removed style change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <img src="{{ site.baseurl }}/assets/img/logo.svg" height="80" />
     </a>
 
-    <nav class="site-nav" style="text-align:center;">
+    <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
         <span class="menu-icon">
