--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/ssi">Self-sovereign identity</a>
-        <a class="page-link" href="{{ site.baseurl }}/data-vault">Data Vault</a>
+        <a class="page-link" href="#">Data Vault</a>
         <a class="page-link" href="#">rLogin</a>
         <a class="page-link" href="#">Identity Manager</a>
       </div>
